--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <title>3D cube</title>
-<link rel="stylesheet" type="text/css" href="styles/cube.css">
-<link rel="stylesheet" type="text/css" href="styles/doodle2.css">
-<link rel="stylesheet" type="text/css" href="styles/certificate2.css">
+<link rel="stylesheet" type="text/css" href="assets/styles/cube.css">
+<link rel="stylesheet" type="text/css" href="assets/styles/doodle2.css">
+<link rel="stylesheet" type="text/css" href="assets/styles/certificate2.css">
 
 <!-- compiled & minified cube code -->
-<script charset="utf-8" src="scripts/tween.r12.js"></script>
-<script charset="utf-8" src="scripts/three.js"></script>
-<script charset="utf-8" src="scripts/cuber.min.js"></script>
+<script charset="utf-8" src="assets/scripts/tween.r12.js"></script>
+<script charset="utf-8" src="assets/scripts/three.js"></script>
+<script charset="utf-8" src="assets/scripts/cuber.min.js"></script>
 
 </head>
 <body>
@@ -44,18 +44,18 @@
 	<span class="pointerdown SPRITE_carrot_down_2x"></span><br>
   </div>
 </div>
-<script charset="utf-8" src="scripts/iecss3d.js"></script>
-<script charset="utf-8" src="scripts/ierenderer.js"></script>
-<script charset="utf-8" src="scripts/deviceMotion.js"></script>
-<script charset="utf-8" src="scripts/locked.js"></script>
+<script charset="utf-8" src="assets/scripts/iecss3d.js"></script>
+<script charset="utf-8" src="assets/scripts/ierenderer.js"></script>
+<script charset="utf-8" src="assets/scripts/deviceMotion.js"></script>
+<script charset="utf-8" src="assets/scripts/locked.js"></script>
 <!-- Certificate js -->
-<script charset="utf-8" src="scripts/textBox.js"></script>
-<script charset="utf-8" src="scripts/ResizeableTextBox.3.js"></script>
-<script charset="utf-8" src="scripts/divBox.js"></script>
-<script charset="utf-8" src="scripts/frames.js"></script>
-<script charset="utf-8" src="scripts/certificate.js"></script>
-<script charset="utf-8" src="scripts/main3.js"></script>
-<script charset="utf-8" src="scripts/zoo.js"></script>
+<script charset="utf-8" src="assets/scripts/textBox.js"></script>
+<script charset="utf-8" src="assets/scripts/ResizeableTextBox.3.js"></script>
+<script charset="utf-8" src="assets/scripts/divBox.js"></script>
+<script charset="utf-8" src="assets/scripts/frames.js"></script>
+<script charset="utf-8" src="assets/scripts/certificate.js"></script>
+<script charset="utf-8" src="assets/scripts/main3.js"></script>
+<script charset="utf-8" src="assets/scripts/zoo.js"></script>
 <script type="text/javascript">
 	function getUrlParam(name) {
     var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
