--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <script charset="utf-8" src="assets/scripts/frames.js"></script>
 <script charset="utf-8" src="assets/scripts/certificate.js"></script>
 <script charset="utf-8" src="assets/scripts/main3.js"></script>
-<script charset="utf-8" src="assets/scripts/zoo.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script type="text/javascript">
 	function getUrlParam(name) {
     var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
@@ -64,13 +64,31 @@
     if (r != null) return unescape(r[2]);
     return null; 
 	}
+
+	var PETS = [];
 	(function () {
-		['red', 'white', 'blue', 'green', 'orange', 'yellow'].map(color =>{
-			if(getUrlParam(color)){
-				document.documentElement.style.setProperty('--zoo-'+color, 'url('+getPetUrl(getUrlParam(color)))+')';
-			}
-		})
-		if(getUrlParam('bg')){
+		const url = 'https://raw.githubusercontent.com/zoo-js/zoo-data/main/json/organizations.json';
+		axios.get(url)
+			.then(function (res) {
+				PETS = res.data.data;
+				['red', 'white', 'blue', 'green', 'orange', 'yellow'].map(color =>{
+					if (getUrlParam(color)) {
+						document.documentElement.style.setProperty('--zoo-'+color, 'url('+getPetUrl(getUrlParam(color)))+')';
+					}
+				})
+			})
+			.catch(function (err) {
+				console.log(err);
+			});
+	})();
+
+	function getPetUrl(name) {
+		let r = PETS.find(o => o.name === name);
+		return r ? 'https://avatars0.githubusercontent.com/u/'+ r.code +'?s=200&v=4' : name;
+	};
+
+	(function () {
+		if (getUrlParam('bg')) {
 			let bg = getUrlParam('bg')
 			bg = bg.includes('*') ? bg.replace('*', '#') : bg
 			document.documentElement.style.setProperty('--zoo-bg', bg);
